--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
+    - uses: ammaraskar/sphinx-action@0.4
       with:
-        docs-folder: "docs/"
+        # The folder containing your sphinx docs.
+        docs-folder: docs/
+        # The command used to build your documentation.
+        build-command: make html
