Updated requirements.txt and setup.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pillow~=10.3.0
-pydicom~=2.4.4
-numpy~=1.26.4
-pandas~=2.2.1
-timm~=1.0.9
-transformers~=4.45.1
-torch~=2.6.0.dev20240927
-scipy~=1.13.1
-dcor~=0.6
-pynever~=0.1.2
-scikit-learn~=1.5.1
+dcor==0.6
+numpy==2.2.3
+pandas==2.2.3
+Pillow==11.1.0
+pydicom==3.0.1
+pyNeVer==0.1.2
+scikit_learn==1.6.1
+scipy==1.15.2
+setuptools==76.0.0
+timm==1.0.15
+torch==2.6.0.dev20240927
+transformers==4.49.0
